--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-extensions-api/mp-rest/url=http://xxx-with-quarkus-server-dapo-sample-project-2.apps.cluster-4tw2b.4tw2b.sandbox999.opentlc.com
+extensions-api/mp-rest/url=${EXTENSIONS-API_MP-REST_URL}
 quarkus.package.type=uber-jar
